# nes-rs

./: .gitattributes  .travis.yml  0.bootstrap.js  CNAME  Cargo.toml  bootstrap.js  build.sh  index_js.bootstrap.js  nes-rs.code-workspace
.github/workflows/: rust.yml
benchmarks/: Cargo.toml  benchmarks.rs
nes-core/: Cargo.toml
nes-core/src/: bus.rs  console.rs  controller.rs  lib.rs  macros.rs  palette.rs  ppu.rs  test.rs  xbr.rs
nes-core/src/cpu/: address_mode.rs  execution.rs  instruction.rs  instructions_info.rs  mod.rs  util.rs
nes-core/src/input/: joypad.rs  mod.rs  zapper_gun.rs
nes-core/src/rom/: mapper.rs  mapper0.rs  mod.rs  rom_file.rs  rom_header.rs
nes-core/src/rom/mappers/: mapper0.rs  mod.rs
nes-server/: Cargo.toml
nes-server/src/: main.rs
nes-standalone/: Cargo.toml
nes-standalone/src/: main.rs
nes-test-suite/: Cargo.toml
nes-test-suite/src/: lib.rs
nes-wasm/: Cargo.toml
nes-wasm/src/: lib.rs
nes-wasm/www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
nes-web/: Cargo.toml
nes-web/src/: lib.rs
nes-web/www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
roms/: Duck Hunt (JUE) [p1].nes
roms/nrom-template-0.05/: CHANGES.txt  README.md  makefile  zip.in
roms/zapper/: background.chr  compile_zapper.bat  example.cfg  zapper.s  zapper_stream.s
