[package]
name = "nes-benchmarks"
version = "0.1.0"
authors = ["Muka Schultze <samuelschultze@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "benchmarks.rs"

[dependencies] 
nes-core = { path = "../nes-core" }
