[package]
name = "nes-core"
version = "0.1.0"
authors = ["Muka Schultze <samuelschultze@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.15.0"
gif = "0.10.3"
bitflags = "1.2.0"

[dev-dependencies]
regex = "1.3.1"
