[package]
name = "nes-core"
version = "0.1.0"
authors = ["Muka Schultze <samuelschultze@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.16.8"
gif = "0.11.2"
bitflags = "1.2.1"
bytesize = "1.0.0"

[dev-dependencies]
regex = "1.3.1"
