[package]
name = "nes-server"
version = "0.1.0"
authors = ["Muka Schultze <samuelschultze@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.32.2", features = ["bundled", "static-link"] }
nes-core = { path = "../nes-core" }
