[package]
name = "nes-standalone"
version = "0.1.0"
authors = ["Muka Schultze <samuelschultze@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stopwatch = "0.0.7"
gl = "0.14.0"
nfd = "0.0.4"
sdl2 = { version = "0.32.2", features = ["bundled", "static-link"] }
nes-core = { path = "../nes-core" }
