[package]
name = "nes-standalone"
version = "0.1.0"
authors = ["Muka Schultze <samuelschultze@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stopwatch = "0.0.7"
gl = "0.14.0"
png = "0.15.0"
nfd = "0.0.4"
winit = "0.20.0-alpha4"
winit_input_helper = "0.4.0-alpha4"
# pixels = { version = "0.0.2", features = ["sdl2-deps"] }
pixels = { git = "https://github.com/parasyte/pixels", features = ["winit-deps"] } 
# sdl2 = { version = "0.33.0", features = ["bundled", "static-link"] }
nes-core = { path = "../nes-core" }
