[package]
name = "nes-standalone"
version = "0.1.0"
authors = ["Muka Schultze <samuelschultze@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stopwatch = "0.0.7"
gl = "0.14.0"
png = "0.16.8"
nfd = "0.0.4"
winit = "0.25.0"
winit_input_helper ="0.10.0"
pixels = "0.4.0"
sdl2 = "0.34.5"
nes-core = { path = "../nes-core" }
