[package]
name = "nes-wasm"
version = "0.1.0"
authors = ["Muka Schultze <samuelschultze@gmail.com>"]
edition = "2018"

[profile.release]
lto = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
nes-core = { path = "../nes-core" }
js-sys = "0.3.35"
wasm-bindgen = "0.2.74"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
 
[dev-dependencies]
wasm-bindgen-test = "0.3.24"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'ImageData',
  'HtmlCanvasElement',
  'console',
]
